# jetson-pimerge

./: install.sh
Networking/: README.md  analysis_options.yaml
Networking/Protobuf/: arm.proto  autonomy.proto  gen_dart.dart  science.proto  version.proto  video.proto  wrapper.proto
Networking/example/: server.dart
Networking/lib/: burt_network.dart  generated.dart  logging.dart
Networking/lib/src/serial/: device.dart  firmware.dart  port_delegate.dart  port_interface.dart
Networking/lib/src/udp/: burt_protocol.dart  rover_heartbeats.dart  rover_server.dart  udp_socket.dart
Networking/test/: failing_port.dart  serial_device_mock_test.dart
Subsystems/: .gitignore  .gitmodules  README.md  analysis_options.yaml  ffigen-can.yaml  pubspec.yaml  winbuild.bat
Subsystems/.github/workflows/: analyzer.yml
Subsystems/lib/: subsystems.dart
Subsystems/lib/src/: server.dart
Subsystems/lib/src/can/: ffi.dart  message.dart  socket_ffi.dart  socket_interface.dart  socket_stub.dart
Subsystems/lib/src/devices/: gps.dart  imu.dart
Subsystems/lib/src/messages/: can.dart  serial.dart  service.dart
Subsystems/src/: CMakeLists.txt  Makefile  config.h
Subsystems/src/burt_can/: Makefile  burt_can.cpp  burt_can.h  burt_can.hpp  burt_can_ffi.cpp
autonomy/: .gitignore  README.md  analysis_options.yaml  dartdoc_options.yaml  pubspec.yaml
autonomy/.github/workflows/: documentation.yml
autonomy/lib/: interfaces.dart  rover.dart  simulator.dart
autonomy/lib/src/interfaces/: a_star.dart  autonomy.dart  detector.dart  drive.dart  error.dart  gps.dart  imu.dart  orchestrator.dart  pathfinding.dart  realsense.dart  reporter.dart  server.dart  service.dart
autonomy/lib/src/rover/: corrector.dart  drive.dart  gps.dart  (+5 more)
autonomy/test/: path_test.dart  rover_test.dart  sensor_test.dart  simulator_test.dart
burt_network/: dartdoc_options.yaml  pubspec.yaml
burt_network/.github/workflows/: analyze.yml
burt_network/Protobuf/: core.proto  drive.proto  gps.proto  logs.proto
burt_network/example/: client.dart
burt_network/lib/src/: service.dart
burt_network/test/: proto_test.dart  serial_port_fail_test.dart
video/: .gitignore  .gitmodules  README.md  analysis_options.yaml  dartdoc_options.yaml  pubspec.yaml
video/lib/: video.dart
video/lib/src/: collection.dart  server.dart
video/src/: CMakeLists.txt  Makefile  build.bat  build.sh  realsense_ffi.cpp  realsense_ffi.h  realsense_internal.cpp  realsense_internal.hpp
video/test/: video_test.dart
(+29 files in other folders)
